--- a/proyecto html/contacto.html
+++ b/proyecto html/contacto.html
@@ -17,35 +17,33 @@
 
   <article class="container">
     <form action="http://www.cursos-diseño.es/mostrar.php" method="post">
-      <div class="mb-3">
-        Nombre
-        <input type="text" name="nombre" class="form-control" required />
+      <div class="mb-3 form-floating col">
+        <input type="text" name="nombre" class="form-control" id="nombre" placeholder="">
+        <label for="nombre">Nombre</label>
       </div>
-      <div class="mb-3">
-        Apellidos
-        <input type="text" name="apellidos" class="form-control" required/>
+      <div class="mb-3 form-floating col">
+        <input type="text" name="apellidos" class="form-control" id="apellidos" placeholder="">
+        <label for="apellidos">Apellidos</label>
+      </div>
+
+      <div class="mb-3 form-floating col">
+        <input type="text" name="correo" class="form-control" id="correo" placeholder="">
+        <label for="correo">Correo electrónico</label>
+      </div>
+
+      <div class="mb-3 form-floating col">
+        <input type="text" name="telefono" class="form-control" id="telefono" placeholder="">
+        <label for="telefono">Teléfono</label>
       </div>
 
       <div class="mb-3">
-        Correo electrónico
-        <input type="text" name="Correo" class="form-control" required />
-      </div>
-
-      <div class="mb-3">
-        Telefono
-        <input type="number" name="Telefono" class="form-control" required />
-      </div>
-
-
-      <div class="mb-3">
-        Asunto
-        <textarea name="Asunto"  type="text"  class="form-control" required></textarea>
+        <textarea name="asunto" type="text" class="form-control" id="asunto" placeholder="Asunto" required></textarea>
       </div>
 
 
       <div class="mb-3">
         <label class="form-check">
-          <input type="checkbox" name="acepto" value="si" class="form-check-input" required/>
+          <input type="checkbox" name="acepto" value="si" class="form-check-input" required />
           Acepto los términos y condiciones
         </label>
       </div>
