--- a/proyecto html/index.html
+++ b/proyecto html/index.html
@@ -8,6 +8,23 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
     <title>Proyecto</title>
     <link rel="icon" href="Imagenes/logoPlaza.jpg">
+
+    <style>
+        .carousel img {
+            width: 60%;
+            aspect-ratio: 16/9;
+            object-fit: cover;
+        }
+
+        .carousel-inner {
+            width: 60%;
+            aspect-ratio: 16/9;
+            object-fit: cover;
+            justify-self: center;
+
+        }
+    </style>
+
 </head>
 
 <body>
@@ -31,14 +48,48 @@
         </nav>
         <h1>Bienvenido a Plaza Norte 2 <br>
             La mayor oferta comercial y de ocio del norte de Madrid</h1>
-        <img src="Imagenes/plaza_norte.webp" alt="">
-        <img src="Imagenes/plaza_norte2.jpg" alt="">
-        <img src="Imagenes/plaza_norte3.jpg" alt="">
-        <img src="Imagenes/plaza_norte4.webp" alt="">
+
+        <!-- Carousel -->
+        <div id="demo" class="carousel slide carousel-fade" data-bs-ride="carousel">
+
+            <!-- The slideshow/carousel -->
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="Imagenes/plaza_norte.webp" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                    <img src="Imagenes/plaza_norte2.jpg" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                    <img src="Imagenes/plaza_norte3.jpg" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                    <img src="Imagenes/plaza_norte4.webp" class="d-block w-100">
+                </div>
+            </div>
+
+            <!-- Left and right controls/icons -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </button>
+
+            <!-- Indicators/dots -->
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
+            </div>
+        </div>
+
         <iframe width="560" height="315" src="https://www.youtube.com/embed/YxEL-_egy8k?si=d5o1VUhhhAqDTUTO"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        </iframe>
 
     </article>
 </body>
